feat: FTBQuest English i18n

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
@@ -78,10 +78,10 @@
   "ftbquests.chapter.builder.quest1796389177213240072.title": "厨房内饰：烛火晚宴",
   "ftbquests.chapter.builder.quest1901970943037427929.description1": "@waterframes",
   "ftbquests.chapter.builder.quest1901970943037427929.description2": "提供电视，你可以用它来放图片或者B站视频。",
-  "ftbquests.chapter.builder.quest1901970943037427929.description3": "@moderndeco",
-  "ftbquests.chapter.builder.quest1901970943037427929.description4": "提供一些现代的电子设备。",
+  "ftbquests.chapter.builder.quest1901970943037427929.description3": "",
+  "ftbquests.chapter.builder.quest1901970943037427929.description4": "",
   "ftbquests.chapter.builder.quest1901970943037427929.task.7016244377497915916.title": "Waterframes",
-  "ftbquests.chapter.builder.quest1901970943037427929.title": "外饰\\\u0026内饰：Waterframes \\\u0026 ModernDeco",
+  "ftbquests.chapter.builder.quest1901970943037427929.title": "外饰\\\u0026内饰：Waterframes",
   "ftbquests.chapter.builder.quest2254943914613527859.description1": "@bloomingnature",
   "ftbquests.chapter.builder.quest2254943914613527859.description2": "群系模组，提供了额外的木材，石材，以及重要的花！",
   "ftbquests.chapter.builder.quest2254943914613527859.task.8081480204643172330.title": "绽放自然",
@@ -156,7 +156,7 @@
   "ftbquests.chapter.bumble.quest5906441837268418145.description2": "\u00266永恒圣所\u0026r有六种颜色，挑战不同，奖励也不同。注意挑战的计时是现实的1/3。",
   "ftbquests.chapter.bumble.quest5906441837268418145.description3": "\u00264红色\u0026r：400s 打败 100 只怪物，建议使用铁魔法。",
   "ftbquests.chapter.bumble.quest5906441837268418145.description4": "\u0026e黄色\u0026r：270s 内穿过 100 黑色环，建议可以飞行后挑战。",
-  "ftbquests.chapter.bumble.quest5906441837268418145.description5": "\u0026b蓝色\u0026r：500s 内在水下打败 50 只怪物，建议携带水下呼吸药水、头盔以及潜水镜。",
+  "ftbquests.chapter.bumble.quest5906441837268418145.description5": "\u0026b蓝色\u0026r：500s 内在水下打败 50 只怪物，建议携带水下呼吸药水与头盔，熟的梭鱼草，以及潜水镜。",
   "ftbquests.chapter.bumble.quest5906441837268418145.description6": "\u0026a绿色\u0026r：300s 内将自然素的泥球左键打回 30 次，自己丢泥球也行。注意只有站到平台上才能攻击，且泥球会脱下装备丢下平台，建议带足够泥球补伤害。绿色精华对于珍稀作物的培育很有帮助。",
   "ftbquests.chapter.bumble.quest5906441837268418145.description7": "\u00265紫色\u0026r：270s 躲刺，禁止飞行。建议使用 F5，带足够食物以及健胃消食片快速回血。",
   "ftbquests.chapter.bumble.quest5906441837268418145.description8": "白色: 500s 击杀 6 个宇宙水晶，有限制伤害。建议使用铁魔法连锁闪电。",
@@ -206,7 +206,7 @@
   "ftbquests.chapter.create.quest1442894209723266885.task.6391753911199642346.title": "批量处理机",
   "ftbquests.chapter.create.quest1499926619463492558.task.7996352040810331932.title": "物流系统",
   "ftbquests.chapter.create.quest1532099902154776895.description1": "你最多可以在地上摆8个工具箱，如果不能访问记得改键位。",
-  "ftbquests.chapter.create.quest1532099902154776895.task.3131295080267661821.title": "Any #create:toolboxes",
+  "ftbquests.chapter.create.quest1532099902154776895.task.3131295080267661821.title": "工具箱",
   "ftbquests.chapter.create.quest1532099902154776895.title": "小盒子真好用",
   "ftbquests.chapter.create.quest1620961242456710003.description1": "百公里消耗两个酒狐。",
   "ftbquests.chapter.create.quest1620961242456710003.title": "梦回种植园",
@@ -281,7 +281,7 @@
   "ftbquests.chapter.create.quest4118590896624951285.description4": "当方块成为动态结构时，会带动所有粘连的方块。",
   "ftbquests.chapter.create.quest4118590896624951285.description5": "对被上胶的方块矩形体内任意一点左击即可取消矩形体内所有粘连。",
   "ftbquests.chapter.create.quest4118590896624951285.description6": "在对轴向底盘的轴向面和径向底盘的周面上胶时操作与黏液球相同，并且不消耗耐久。",
-  "ftbquests.chapter.create.quest4288636357818253142.task.3025899557624171989.title": "Any #createdeco:placards",
+  "ftbquests.chapter.create.quest4288636357818253142.task.3025899557624171989.title": "塑料卡",
   "ftbquests.chapter.create.quest4288636357818253142.title": "无线遥控",
   "ftbquests.chapter.create.quest4355037646741365961.description1": "地位非常尴尬的矿物",
   "ftbquests.chapter.create.quest4393962753240134114.description1": "在机械动力中你不需要像原版那样生产大量黏液球，也许一组就够了。",
@@ -337,7 +337,7 @@
   "ftbquests.chapter.create.quest6564895868397522381.description5": "\u0026c黄铜扬声器(Brass Speaker)\u0026r接收红石信号后会向作用范围内的玩家播放一段音频，同时会发送一段\"[speaker]\"+\"自定义信息\"的消息。作用范围为以方块自身为中心，半径为10的球型。自定义消息使用改名的命名牌添加。",
   "ftbquests.chapter.create.quest6564895868397522381.description6": "\u0026c雷达(Radar)\u0026r可以显示周围实体的位置。",
   "ftbquests.chapter.create.quest6564895868397522381.title": "学生卡",
-  "ftbquests.chapter.create.quest6630804248047432572.task.5284159922031585330.title": "Any #minecraft:logs",
+  "ftbquests.chapter.create.quest6630804248047432572.task.5284159922031585330.title": "原木",
   "ftbquests.chapter.create.quest6630804248047432572.title": "要致富，先撸树",
   "ftbquests.chapter.create.quest664172232202646631.description1": "手持桌布右键有店长的发报器可以设置其交易物及数量，以及交易包裹的名称（务必设置！）。",
   "ftbquests.chapter.create.quest664172232202646631.description2": "放下桌布后在正侧可以设置价格和数量。",
@@ -369,7 +369,7 @@
   "ftbquests.chapter.create.quest7516634458198983425.description1": "合成安山合金的另一原料。",
   "ftbquests.chapter.create.quest7516634458198983425.description2": "除了原版刷铁机，你同样有其他方法实现铁自动化。",
   "ftbquests.chapter.create.quest7516634458198983425.title": "来硬的",
-  "ftbquests.chapter.create.quest7570121893153831798.task.7421137199116688510.title": "制作任一轨道，或者选择跨越",
+  "ftbquests.chapter.create.quest7570121893153831798.task.7421137199116688510.title": "制作任一轨道。",
   "ftbquests.chapter.create.quest7570121893153831798.title": "汽笛轰鸣",
   "ftbquests.chapter.create.quest7942786962679173793.description1": "命名的包裹需要知道它去哪，需要接受它的装置。",
   "ftbquests.chapter.create.quest7942786962679173793.description2": "货物蛙港可以将其下打包机内的包裹挂到锁链上，并接受与其同名的包裹。对打包机充能可以阻止其接收。",
@@ -383,7 +383,7 @@
   "ftbquests.chapter.create.quest8127575592016223590.task.7822537804465652059.title": "选择你的动力源！",
   "ftbquests.chapter.create.quest8147923521395416701.title": "你是布线大师吗",
   "ftbquests.chapter.create.quest831851804509971813.description1": "将小麦粉与水桶合成获得面团，这个合成返还空桶。",
-  "ftbquests.chapter.create.quest831851804509971813.task.6200162975294395832.title": "Any #forge:dough",
+  "ftbquests.chapter.create.quest831851804509971813.task.6200162975294395832.title": "面团",
   "ftbquests.chapter.create.quest831851804509971813.title": "面团",
   "ftbquests.chapter.create.quest8320472698066912506.description1": "也许你需要一个自然罗盘，但它并不好做。",
   "ftbquests.chapter.create.quest8320472698066912506.title": "跑图，或洗劫村庄？",
@@ -480,7 +480,7 @@
   "ftbquests.chapter.create.quest8770930690557881160.title": "动力活塞",
   "ftbquests.chapter.create.quest8850114652304992612.title": "再来点硬的",
   "ftbquests.chapter.create.quest8883424417245022444.description1": "你的动力源与工作元件的动力接口不在一个方向上怎么办，试试这些。",
-  "ftbquests.chapter.create.quest8883424417245022444.title": "动力转向",
+  "ftbquests.chapter.create.quest8883424417245022444.title": "转向",
   "ftbquests.chapter.create.quest8883713239980676213.description1": "在整合包中，你还可以把鼓风机放在龙首后面进行龙息加工，获取一些与末地相关的资源。具体的配方请看 JEI。",
   "ftbquests.chapter.create.quest8883713239980676213.title": "龙息加工",
   "ftbquests.chapter.create.quest894165536878691273.description1": "打磨玫瑰石英是一个漫长的过程，在制作完机械手之后，你可以用机械手帮你完成这一步骤。",
@@ -507,7 +507,7 @@
   "ftbquests.chapter.create_advance.quest2212208496116360109.description3": "\u0026aV6：圆石粉碎得到砂砾，粉碎凝灰岩产出燧石，发包岩浆塑形模块产出安山岩；安山岩和铁粒发包到加热搅拌模块。铁粒可在铁锭入库时输入至压缩抽屉来获取。",
   "ftbquests.chapter.create_advance.quest2212208496116360109.title": "\u00266基本：安山合金机",
   "ftbquests.chapter.create_advance.quest3038170017119822431.description1": "你可能会想问：这是人能做的吗？但是这个真能做。",
-  "ftbquests.chapter.create_advance.quest3038170017119822431.description2": "\u0026aV6：工厂仪表自动补货青金石与发光墨囊，用黄铜溜槽或者动力臂均分材料。手动搓一个超越经验瓶，输出用移液器与流体接口（或者智能流体接口）过滤。超级燃烧用大豆油。附魔书模板用古卷升级附魔书。",
+  "ftbquests.chapter.create_advance.quest3038170017119822431.description2": "\u0026aV6：工厂仪表自动补货青金石与发光墨囊，用黄铜溜槽或者动力臂均分材料。手动搓一个超越经验瓶，输出用移液器与流体接口（或者智能流体管道）过滤。超级燃烧用大豆油。附魔书模板用古卷升级附魔书。",
   "ftbquests.chapter.create_advance.quest3038170017119822431.title": "\u00266进阶：超越经验机",
   "ftbquests.chapter.create_advance.quest3171656338290477852.description1": "构建动力臂与转速控制器等器械的重要组件。",
   "ftbquests.chapter.create_advance.quest3171656338290477852.description2": "\u0026aV5：虚空箱子输出金锭、铁粒、大小齿轮，循环装配。",
@@ -541,8 +541,8 @@
   "ftbquests.chapter.create_advance.quest6707113174247889134.title": "\u00266基本：下界石英",
   "ftbquests.chapter.create_advance.quest7034589162735668792.description1": "\u0026a同样可以通过生物笼量产，不过这些 DNA 相对更难取得。",
   "ftbquests.chapter.create_advance.quest7034589162735668792.title": "\u00266基础：生物材料 II",
-  "ftbquests.chapter.create_advance.quest7105633950547292434.description1": "\u0026aV5：蠹虫经验机提供经验以复制附魔书，皮革和末影珍珠通过笼子产出，破灭残片用 TNT 复制。",
-  "ftbquests.chapter.create_advance.quest7105633950547292434.description2": "\u0026aV6：经验颗粒由高压钻石途径提供，用工厂仪表补货输入到祛魔池内得到液态经验，输入打印机内复制附魔书。铁砧动力合成。",
+  "ftbquests.chapter.create_advance.quest7105633950547292434.description1": "\u0026a蠹虫经验机提供经验以复制附魔书，皮革和末影珍珠通过笼子产出，破灭残片用 TNT 复制。",
+  "ftbquests.chapter.create_advance.quest7105633950547292434.description2": "\u0026a经验颗粒由高压钻石途径提供，用工厂仪表补货输入到祛魔池内得到液态经验，输入打印机内复制附魔书。铁砧动力合成。",
   "ftbquests.chapter.create_advance.quest7105633950547292434.description3": "\u0026b附魔书模板可通过刷村民交易，或黄蜂领域的蜂蜜结晶花获得。",
   "ftbquests.chapter.create_advance.quest7105633950547292434.title": "\u00266进阶：永恒锭",
   "ftbquests.chapter.create_advance.quest7608474683282471040.description1": "单纯为了在机器过多时方便接线。",
@@ -559,7 +559,7 @@
   "ftbquests.chapter.create_advance.quest9049102451793150499.description1": "\u0026a思路：甘蔗压板得到纸，沙子和纸搅拌得到砂纸。石英与红石搅拌得到晶体，用砂纸研磨，与对应的金属板合成。",
   "ftbquests.chapter.create_advance.quest9049102451793150499.title": "\u00266基础：电子管和真空管",
   "ftbquests.chapter.create_advance.title": "\u00265资深工程师",
-  "ftbquests.chapter.crockpot.quest1072910525105994334.description1": "奶帽是优质的饥饿值饱和值来源，但缺点是耐久太少。或许应该更进一步……",
+  "ftbquests.chapter.crockpot.quest1072910525105994334.description1": "奶帽是优质的饥饿值饱和值来源，但缺点是耐久太少。",
   "ftbquests.chapter.crockpot.quest1072910525105994334.title": "奶帽是用猪鼻做的",
   "ftbquests.chapter.crockpot.quest1160574799622916336.description1": "量大管饱。",
   "ftbquests.chapter.crockpot.quest1160574799622916336.description2": "\u0026a一种可能的思路：烤鸡机或者鸡笼。",
@@ -730,28 +730,28 @@
   "ftbquests.chapter.kots.quest1629477366807380620.description5": "[]：[INFO][WARN][ERROR][TODO]",
   "ftbquests.chapter.kots.quest1629477366807380620.task.2681752702552566440.title": "\u00264你真的读完了吗？",
   "ftbquests.chapter.kots.quest1629477366807380620.title": "关于字体",
-  "ftbquests.chapter.kots.quest2839885996462273347.description1": "       整合包使用的领地模组为 OPAC，你可以使用领地来保护某个区块，或者强加载某个区块。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description10": "      如果你要为指定玩家添加你认领区块的操作权，但是对方在另一个队伍的话，可输入\u00262 /openpac-parties ally add [玩家名称]\u0026r 。（注意：如果被指定的玩家不在任何队伍中，此指令无效）",
-  "ftbquests.chapter.kots.quest2839885996462273347.description11": "       如果要取消指定玩家在你认领区块上的操作权，只需要\u00262 /openpac-parties ally remove [玩家名称]\u0026r。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description12": "       队伍内拥有ADMIN权限的玩家也可以使用该指令。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description13": "       如果要退出队伍，可以输入\u00262 /openpac-parties leave\u0026r.",
-  "ftbquests.chapter.kots.quest2839885996462273347.description14": "       如果是队伍创建者，可以输入\u00262 /openpac-parties destroy confirm\u0026r 来删除队伍。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description15": "       如果要为队伍改名，可输入\u00262 /openpac player-config set parties.name [新的名称] \u0026r。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description16": "        如果要为你认领的区块改名，输入 \u00262/openpac player-config set claims.name [新的名称] \u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description1": "整合包使用的领地模组为 OPAC，你可以使用领地来保护某个区块，或者强加载某个区块。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description10": "如果你要为指定玩家添加你认领区块的操作权，但是对方在另一个队伍的话，可输入\u00262 /openpac-parties ally add [玩家名称]\u0026r 。（注意：如果被指定的玩家不在任何队伍中，此指令无效）",
+  "ftbquests.chapter.kots.quest2839885996462273347.description11": "如果要取消指定玩家在你认领区块上的操作权，只需要\u00262 /openpac-parties ally remove [玩家名称]\u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description12": "队伍内拥有ADMIN权限的玩家也可以使用该指令。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description13": "如果要退出队伍，可以输入\u00262 /openpac-parties leave\u0026r.",
+  "ftbquests.chapter.kots.quest2839885996462273347.description14": "如果是队伍创建者，可以输入\u00262 /openpac-parties destroy confirm\u0026r 来删除队伍。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description15": "如果要为队伍改名，可输入\u00262 /openpac player-config set parties.name [新的名称] \u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description16": "如果要为你认领的区块改名，输入 \u00262/openpac player-config set claims.name [新的名称] \u0026r。",
   "ftbquests.chapter.kots.quest2839885996462273347.description17": "[队伍机制如何运作?]",
-  "ftbquests.chapter.kots.quest2839885996462273347.description18": "       大多数情况下建议每一位玩家都建立一个队伍，在非必要的情况下尽量少邀请玩家进入自己的队伍。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description18": "大多数情况下建议每一位玩家都建立一个队伍，在非必要的情况下尽量少邀请玩家进入自己的队伍。",
   "ftbquests.chapter.kots.quest2839885996462273347.description19": "下文为队伍机制的运作方法：",
-  "ftbquests.chapter.kots.quest2839885996462273347.description2": "       按下\u0026a[M]\u0026r打开大地图后，鼠标右击一个区块，在弹出的窗口中点击\"【认领此区块】\"即可认领选中的区块为自己的领地。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description20": "       \u00262\"队伍1\"\u0026r内只有\u00262玩家A\u0026r，\u00266\"玩家C\"\u0026r输入命令让\u00262\"玩家A\"\u0026r的\u00262\"队伍1\"\u0026r与\u00266\"玩家C\"\u0026r的\u00266\"队伍3\"\u0026r结盟，意思是\u00262\"队伍1\"\u0026r内的\u00262【所有玩家】\u0026r都可以在\u00266\"玩家C\"\u0026r认领的区块中进行操作，这不会自动赋予\u00266\"队伍3\"\u0026r中的\u00266所有玩家\u0026r在\u00262\"玩家A\"\u0026r认领的区块进行操作的权限，于此同时由于\u0026d\"玩家B\"\u0026r在\u0026d\"队伍2\"\u0026r，且\u00266\"玩家C\"\u0026r没有与\u00266\"队伍2\"\u0026r结盟，所以\u0026d\"队伍2\"\u0026r内的\u0026d所有玩家\u0026r都无法操作\u00266\"玩家C\"\u0026r认领的区块。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description21": "       但是，如果\u00262\"玩家A\"\u0026r和\u00262\"玩家B\"\u0026r都在\"队伍1\"内，当\u00266\"玩家C\"\u0026r与\u00262\"队伍1\"\u0026r中的任何玩家结盟时，那么\u00262\"队伍1\"\u0026r内的\u00262所有玩家\u0026r都可以操作\u00266\"玩家C\"\u0026r认领的区块。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description22": "       \u0026aTL;DR: \u0026l\u0026b推荐每一位玩家都建立一个队伍\u0026r，可以避免在与其它队伍结盟时出现给其它队伍内的与自己不认识的玩家授权的情况。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description3": "       你可以按住鼠标右键然后进行拖拽，这样可选中多个区块。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description4": "       当然，你也可以手动输入指令\u00262 /openpac-claims claim\u0026r 或者按下\u00262 \u0027 \u0026r按键来认领当前区块。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description5": "       在已有认领区块后，输入\u00262 /openpac-parties create\u0026r 创建你的队伍。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description6": "       如果要往你的队伍里邀请玩家，可输入\u00262 /openpac-parties member invite [玩家名称] \u0026r。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description7": "       或者，玩家也可以\u00262 /openpac-parties join [队伍ID] \u0026r来加入指定队伍。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description8": "       如果要为你队伍里的玩家配置权限，可输入\u00262 /openpac-parties member rank [权限] [玩家名称] \u0026r。",
-  "ftbquests.chapter.kots.quest2839885996462273347.description9": "       要从你的队伍中移除玩家，输入\u00262 /openpac-parties member kick [玩家昵称]\u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description2": "按下\u0026a[M]\u0026r打开大地图后，鼠标右击一个区块，在弹出的窗口中点击\"【认领此区块】\"即可认领选中的区块为自己的领地。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description20": "\u00262\"队伍1\"\u0026r内只有\u00262玩家A\u0026r，\u00266\"玩家C\"\u0026r输入命令让\u00262\"玩家A\"\u0026r的\u00262\"队伍1\"\u0026r与\u00266\"玩家C\"\u0026r的\u00266\"队伍3\"\u0026r结盟，意思是\u00262\"队伍1\"\u0026r内的\u00262【所有玩家】\u0026r都可以在\u00266\"玩家C\"\u0026r认领的区块中进行操作，这不会自动赋予\u00266\"队伍3\"\u0026r中的\u00266所有玩家\u0026r在\u00262\"玩家A\"\u0026r认领的区块进行操作的权限，于此同时由于\u0026d\"玩家B\"\u0026r在\u0026d\"队伍2\"\u0026r，且\u00266\"玩家C\"\u0026r没有与\u00266\"队伍2\"\u0026r结盟，所以\u0026d\"队伍2\"\u0026r内的\u0026d所有玩家\u0026r都无法操作\u00266\"玩家C\"\u0026r认领的区块。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description21": "但是，如果\u00262\"玩家A\"\u0026r和\u00262\"玩家B\"\u0026r都在\"队伍1\"内，当\u00266\"玩家C\"\u0026r与\u00262\"队伍1\"\u0026r中的任何玩家结盟时，那么\u00262\"队伍1\"\u0026r内的\u00262所有玩家\u0026r都可以操作\u00266\"玩家C\"\u0026r认领的区块。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description22": "\u0026aTL;DR: \u0026l\u0026b推荐每一位玩家都建立一个队伍\u0026r，可以避免在与其它队伍结盟时出现给其它队伍内的与自己不认识的玩家授权的情况。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description3": "你可以按住鼠标右键然后进行拖拽，这样可选中多个区块。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description4": "当然，你也可以手动输入指令\u00262 /openpac-claims claim\u0026r 或者按下\u00262 \u0027 \u0026r按键来认领当前区块。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description5": "在已有认领区块后，输入\u00262 /openpac-parties create\u0026r 创建你的队伍。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description6": "如果要往你的队伍里邀请玩家，可输入\u00262 /openpac-parties member invite [玩家名称] \u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description7": "或者，玩家也可以\u00262 /openpac-parties join [队伍ID] \u0026r来加入指定队伍。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description8": "如果要为你队伍里的玩家配置权限，可输入\u00262 /openpac-parties member rank [权限] [玩家名称] \u0026r。",
+  "ftbquests.chapter.kots.quest2839885996462273347.description9": "要从你的队伍中移除玩家，输入\u00262 /openpac-parties member kick [玩家昵称]\u0026r。",
   "ftbquests.chapter.kots.quest2839885996462273347.task.721123564628193135.title": "\u00264你真的读完了吗？",
   "ftbquests.chapter.kots.quest2839885996462273347.title": "关于领地系统",
   "ftbquests.chapter.kots.quest4393421732070916680.description1": "整合包自带 SVC 语音，你可以按下\u0026a[F10]\u0026r调整语音通话的选项。",
@@ -886,7 +886,7 @@
   "ftbquests.chapter.majo.quest2834693592681426277.title": "\u00265魔女的靴子",
   "ftbquests.chapter.majo.quest325688207754089119.description1": "\u0026o\u00263听说，只要学会了一种特殊的魔法，就可以把静物变成人形？\u0026r",
   "ftbquests.chapter.majo.quest325688207754089119.description2": "按下\u0026a[R]\u0026r可以放出或收起扫帚，\u0026a[空格]\u0026r上升而\u0026a[左Ctrl]\u0026r下降，\u0026a[左SHIFT]\u0026r离开扫帚。",
-  "ftbquests.chapter.majo.quest325688207754089119.description3": "如果你不习惯，也可以在模组的配置界面关闭最后一项，将下降设为\u0026a[左SHIFT]\u0026r，只使用\u0026a[R]\u0026r收起扫帚。",
+  "ftbquests.chapter.majo.quest325688207754089119.description3": "按下\u00a7a[Y]\u00a7r可以打开设置界面，调整视角与飞行速度等。",
   "ftbquests.chapter.majo.quest325688207754089119.description4": "\u0026b相比其他可以飞行的道具，扫帚短距离飞行终归有些麻烦，但是很适合长距离飞行。",
   "ftbquests.chapter.majo.quest325688207754089119.title": "魔女的扫帚",
   "ftbquests.chapter.majo.quest4407902697146887462.description1": "\u0026b如果你有多余的永恒锭，可以来这里尝试抽取永恒附魔书。",
