--- a/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "kots.modpack.name": "\u00a7bKumo O Tagayasu",
   "kubejs.message.enchanting_table_blocked.0": "\u00a7cYou, cannot use the enchanting table!",
   "kubejs.message.enchanting_table_blocked.1": "\u00a7bUse Village Trade, Blaze Enchanter or Crysyalline Flower instead.",
   
