--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "kots.modpack.name": "\u00a7b耕云钓月",
   "kubejs.message.enchanting_table_blocked.0": "\u00a7b你不准附魔！",
   "kubejs.message.enchanting_table_blocked.1": "\u00a7b通过村民交易、烈焰人附魔室或蜂蜜结晶花来获取附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "\u00a7a此工具已绑定投影模组工具。",
