feat(client): adjust translate

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
@@ -1,4 +1,5 @@
 {
+  "kots.modpack.name": "\u00a7b耕云钓月",
   "kubejs.message.enchanting_table_blocked.0": "§b禁止使用附魔！",
   "kubejs.message.enchanting_table_blocked.1": "§b請透過村民交易、烈焰使者附魔室或蜂蜜結晶花取得附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "§a此工具已綁定投影模組工具。",
