--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
@@ -1,4 +1,5 @@
 {
+  "kots.modpack.name": "\u00a7b耕云钓月",
   "kubejs.message.enchanting_table_blocked.0": "\u00a7b你不许附魔!",
   "kubejs.message.enchanting_table_blocked.1": "\u00a7b請透過村民交易、烈焰使者附魔室或蜂蜜結晶花以獲取附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "\u00a7a此工具已綁定至投影模組工具。",
