feat(common): update mods
feat(server): return dimension viewer

feat(common): bell recipes

feat(common): ftbquests

feat(client): itlt

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
@@ -78,8 +78,6 @@
   "ftbquests.chapter.builder.quest1796389177213240072.title": "厨房内饰：烛火晚宴",
   "ftbquests.chapter.builder.quest1901970943037427929.description1": "@waterframes",
   "ftbquests.chapter.builder.quest1901970943037427929.description2": "提供电视，你可以用它来放图片或者B站视频。",
-  "ftbquests.chapter.builder.quest1901970943037427929.description3": "",
-  "ftbquests.chapter.builder.quest1901970943037427929.description4": "",
   "ftbquests.chapter.builder.quest1901970943037427929.task.7016244377497915916.title": "Waterframes",
   "ftbquests.chapter.builder.quest1901970943037427929.title": "外饰\\\u0026内饰：Waterframes",
   "ftbquests.chapter.builder.quest2254943914613527859.description1": "@bloomingnature",
@@ -636,7 +634,7 @@
   "ftbquests.chapter.first.quest4002922450322117958.task.317095820743540569.title": "\u00266基础章节概述",
   "ftbquests.chapter.first.quest4002922450322117958.title": "\u0026e基础章节概述",
   "ftbquests.chapter.first.title": "\u0026e基础章节概述",
-  "ftbquests.chapter.irons.quest115457515855062932.description1": "又快又快",
+  "ftbquests.chapter.irons.quest115457515855062932.description1": "冲刺，冲刺！",
   "ftbquests.chapter.irons.quest117581799412881731.description1": "毕业法术书，拥有12个槽位与冷却缩减效果。",
   "ftbquests.chapter.irons.quest1201537628334208402.description1": "将想要写入的卷轴放入即可",
   "ftbquests.chapter.irons.quest1201537628334208402.description2": "你也不想用掉传说品质的卷轴吧....?",
@@ -647,32 +645,41 @@
   "ftbquests.chapter.irons.quest1379884077043765030.description1": "拥有12个槽位",
   "ftbquests.chapter.irons.quest1520736446377827607.description1": "由高位唤魔者或者普通唤魔者掉落，掉落概率是1.25%%，受抢夺影响，需要玩家击杀才能获得。",
   "ftbquests.chapter.irons.quest1520736446377827607.description2": "在地下墓穴的劫掠兽房间中的战利品箱内也有极低概率刷出。",
+  "ftbquests.chapter.irons.quest1549589458065429752.description1": "高贵的法力值恢复。",
   "ftbquests.chapter.irons.quest1558535080823409897.description1": "火焰法术",
+  "ftbquests.chapter.irons.quest1694666064478035071.description1": "击败原初受火者后有概率掉落钥匙，打开宝库后有概率获得炽金锭。",
+  "ftbquests.chapter.irons.quest1902079980148857199.description1": "冰霜流派的毕业魔法书，看起来不是很强势呢。",
   "ftbquests.chapter.irons.quest2013893219969268542.description1": "自然法术",
-  "ftbquests.chapter.irons.quest2340273670502298618.description1": "铁魔法提供了多种强力或是有趣的装备与饰品。",
+  "ftbquests.chapter.irons.quest2340273670502298618.description1": "铁魔法提供了很多法杖、武器、装备与饰品，大多可以增益法术。",
   "ftbquests.chapter.irons.quest2340273670502298618.description2": "\u00267\u0026n其实这里是有图标的",
   "ftbquests.chapter.irons.quest2340273670502298618.task.8159261493176922754.title": "装备与饰品",
+  "ftbquests.chapter.irons.quest2493009499270175995.description1": "秘银锭可以通过在地下挖矿，或者给死灵金属锭注魔来获得。",
   "ftbquests.chapter.irons.quest2505886247817819697.description1": "由破旧法术书合成而来。",
   "ftbquests.chapter.irons.quest2505886247817819697.subtitle": " ",
-  "ftbquests.chapter.irons.quest3042281032712670407.description1": "每件装备最多可以强化三次（服务器十次），可以制作的升级法球种类详见jei\u0026e（按U查看空白升级法球用途）",
+  "ftbquests.chapter.irons.quest3015181655232430294.description1": "猩红流派的毕业魔法书，比起亡灵律典更为实用。",
+  "ftbquests.chapter.irons.quest3042281032712670407.description1": "每件装备最多可以强化十次，可以制作的升级法球种类详见jei。",
+  "ftbquests.chapter.irons.quest3042281032712670407.description2": "新版本变成了白菜价，妈妈再也不用担心我挖矿挖到吐啦！",
   "ftbquests.chapter.irons.quest3071465818533360026.description1": "鲜血法术",
+  "ftbquests.chapter.irons.quest3071465818533360026.description2": "在炼金锅里面泡澡。",
   "ftbquests.chapter.irons.quest3281667011670162518.description1": "成为法术大师吧！",
-  "ftbquests.chapter.irons.quest3281667011670162518.subtitle": "本章作者：RubicA",
+  "ftbquests.chapter.irons.quest3281667011670162518.subtitle": "本章作者：RubicA，Polaris_Light",
   "ftbquests.chapter.irons.quest3281667011670162518.task.4295873944209070394.title": "铁魔法",
   "ftbquests.chapter.irons.quest3281667011670162518.title": "\u00266这就是法术的世界吗",
   "ftbquests.chapter.irons.quest3443205356844796093.description1": "忏悔石可以将武器上的法术消除，也可以与使用过升级球的装备结合去除升级。",
   "ftbquests.chapter.irons.quest3443205356844796093.title": "对方撤回了一个法术",
   "ftbquests.chapter.irons.quest344357227415954611.description1": "只有物品介绍中有\u0026e“可注入法术（0/1）”\u0026f字样的装备才可以注入法术。（若将法术卷轴敲在武器上，会变为武器的右键技能；注入衣服相当于增加了一个法术携带槽位。）",
   "ftbquests.chapter.irons.quest344357227415954611.task.735326727656283388.title": "注入法术",
-  "ftbquests.chapter.irons.quest3632816082511384797.description1": "冒险中随处可见，不是吗？",
+  "ftbquests.chapter.irons.quest3632816082511384797.description1": "冒险中随处可见的东西。",
   "ftbquests.chapter.irons.quest4077773201763293156.description1": "炼金锅的使用较为复杂，详细的使用方法请移步MC百科或Wiki，在此不再赘述。",
   "ftbquests.chapter.irons.quest4155308214732673622.description1": "在古城战利品箱中获得。",
   "ftbquests.chapter.irons.quest4161896741851995350.description1": "独特的法术书！",
   "ftbquests.chapter.irons.quest4161896741851995350.task.2486529895687939366.title": "独特法术书",
-  "ftbquests.chapter.irons.quest4179541747153087043.description1": "拥有8个槽位与一定的buff",
-  "ftbquests.chapter.irons.quest4248940398352851244.description1": "可以对装备进行升级操作，将装备与升级法球结合；或是给装备注入法术",
+  "ftbquests.chapter.irons.quest4179541747153087043.description1": "拥有8个槽位与一定的buff。",
+  "ftbquests.chapter.irons.quest4248940398352851244.description1": "奥术铁砧可以将装备与升级法球结合，或是给装备注入法术。",
+  "ftbquests.chapter.irons.quest4394955467480459079.description1": "原初受火者的灵魂碎片，可以使古老的武器展现真正的力量。",
   "ftbquests.chapter.irons.quest4467640425300198132.description1": "大概是综合属性最优秀的魔杖。",
   "ftbquests.chapter.irons.quest4638065642595319923.description1": "任意门！",
+  "ftbquests.chapter.irons.quest4688775958352342996.description1": "每个法师都有一个近战的梦想。",
   "ftbquests.chapter.irons.quest4728579043284236594.description1": "击杀死者之王后有 50%% 概率掉落。",
   "ftbquests.chapter.irons.quest4757800134059526065.description1": "万金油套装",
   "ftbquests.chapter.irons.quest4757800134059526065.title": "战斗法师套装",
@@ -681,12 +688,16 @@
   "ftbquests.chapter.irons.quest4857065615003740579.title": "诶，有透是不是",
   "ftbquests.chapter.irons.quest4928989186775899308.description1": "雷电法术",
   "ftbquests.chapter.irons.quest4928989186775899308.description2": "闪电苦力怕可以通过女仆模组的祭坛生成，也可以使用落雷法术。",
-  "ftbquests.chapter.irons.quest521856152132857915.description1": "制作盔甲的基础素材。",
+  "ftbquests.chapter.irons.quest4928989186775899308.description3": "使用连点可以快速获取。",
+  "ftbquests.chapter.irons.quest5131965702523572010.description1": "击杀原初受火者后50%%掉落。",
+  "ftbquests.chapter.irons.quest5131965702523572010.description2": "什么，你问我打不过怎么办？给他喝伏特加啊！",
+  "ftbquests.chapter.irons.quest521856152132857915.description1": "制作法师的基础素材。",
   "ftbquests.chapter.irons.quest5339063644055888132.description1": "在卷轴撰写台上制作你的卷轴。从左到右依次放入墨水、纸以及对应类型的媒介。",
   "ftbquests.chapter.irons.quest5339063644055888132.title": "人造卷轴",
   "ftbquests.chapter.irons.quest5340840948225945757.description1": "比初学者法术书好一些！",
   "ftbquests.chapter.irons.quest5518114228782261650.description1": "使用法杖可以更好地施法！当你持有法杖时，右键即可释放选中的法术。",
   "ftbquests.chapter.irons.quest5518114228782261650.description2": "\u00264（法杖会提供一定量的正面buff）",
+  "ftbquests.chapter.irons.quest5518114228782261650.title": "法杖",
   "ftbquests.chapter.irons.quest5664119239817930676.description1": "战利品箱中有概率开出，或与流浪商人交易获得。",
   "ftbquests.chapter.irons.quest5672080269144982052.description1": "当你找到远古城市时...",
   "ftbquests.chapter.irons.quest5672080269144982052.task.6198387328187372956.title": "古老的智慧",
@@ -696,6 +707,9 @@
   "ftbquests.chapter.irons.quest6216602416250366875.description1": "雷公助我！",
   "ftbquests.chapter.irons.quest6304890106916109688.description1": "1.20版本的铁魔法删除了两张相同的卷轴在铁砧上合成为更高一级卷轴的功能。所以满级法术只能通过使用传奇墨水在法术撰写台上制作获取。\u0026b（欧皇也能摸到的说）",
   "ftbquests.chapter.irons.quest6304890106916109688.task.6931759346439486370.title": "关于法术等级",
+  "ftbquests.chapter.irons.quest6487138082082706190.description1": "佩戴者需要“末影法术强度”属性的值大于等于 1.25（基础值 1，即需要 25%%的增幅）才能正常发挥该饰品的功能。此后，物品描述会变为：传送后获得3秒的闪避效果。",
+  "ftbquests.chapter.irons.quest6487138082082706190.description2": "装备至项链槽时，使用瞬间移动/传送术、血步等法术传送后获得3秒的闪避效果。",
+  "ftbquests.chapter.irons.quest6487138082082706190.description3": "若不满足使用条件，本物品被装备后会瞬间被移出项链槽并瞬移到附近某处。如果你在满足使用条件时装备好了它，即使此后末影法术强度变小，它也能正常发挥功能且不会瞬移消失。",
   "ftbquests.chapter.irons.quest6660012773324199704.description1": "10个槽位",
   "ftbquests.chapter.irons.quest6674022342368477004.description1": "你已经参透了魔法的奥秘，让我们庆祝新王的诞生！",
   "ftbquests.chapter.irons.quest7206715109682479446.description1": "比较综合的过渡魔杖。",
@@ -703,21 +717,26 @@
   "ftbquests.chapter.irons.quest7335314771744235229.task.712877028853922931.title": "前期的选择",
   "ftbquests.chapter.irons.quest7521606835612270564.description1": "使用不同的媒介可以制作不同派系的法术。",
   "ftbquests.chapter.irons.quest7521606835612270564.task.7425744025374365874.title": "媒介",
+  "ftbquests.chapter.irons.quest7566335957311827686.description1": "食之无味，弃之可惜。",
   "ftbquests.chapter.irons.quest7824525393963547042.description1": "与流浪商人交易获得。",
   "ftbquests.chapter.irons.quest7915540124684403694.description1": "寒冰法术",
+  "ftbquests.chapter.irons.quest7915540124684403694.description2": "击杀流浪者可以获得。",
   "ftbquests.chapter.irons.quest8077330714692783584.description1": "击杀亡灵类怪物或从地牢宝箱中获得。",
   "ftbquests.chapter.irons.quest8146369098984547947.description1": "末影法术",
   "ftbquests.chapter.irons.quest8184980465484912998.description1": "每位优秀的巫师都应该有一本自己的法术书！它是你施法的媒介。\u00264（法术书要放进饰品栏的“法术书”栏位才可以生效）",
-  "ftbquests.chapter.irons.quest8184980465484912998.task.6893280707522733994.title": "法术书",
+  "ftbquests.chapter.irons.quest8184980465484912998.task.7477421145031056474.title": "法术书",
   "ftbquests.chapter.irons.quest8258558434157139070.description1": "墨水还可以通过在炼金锅中回收卷轴获得。回收卷轴有50%%的概率获得相同品质的墨水。",
   "ftbquests.chapter.irons.quest8258558434157139070.task.4008803020326449243.title": "原汤化原食",
+  "ftbquests.chapter.irons.quest8282225264557547694.description1": "邪术是一类特殊的魔法，需要通过邪术手稿学习后获得。",
+  "ftbquests.chapter.irons.quest8282225264557547694.description2": "邪术手稿碎片可以通过古城战利品箱和与流浪商人交易获得。",
+  "ftbquests.chapter.irons.quest8336483086834361083.description1": "升级版，因召唤物自然存在时长归零而结束施法的召唤法术不会进入冷却。",
   "ftbquests.chapter.irons.quest8817909134139140164.description1": "神圣法术",
-  "ftbquests.chapter.irons.quest8828183776571692232.description1": "击杀烈焰人有概率获得。",
+  "ftbquests.chapter.irons.quest8828183776571692232.description1": "击杀烈焰人有概率获得，不错的过渡用魔法书。",
   "ftbquests.chapter.irons.quest9060542214195515303.description1": "墨水决定了制作出法术的品质，法术的品质越高，效果越强，尽力获得传说墨水吧！",
   "ftbquests.chapter.irons.quest9060542214195515303.title": "墨水",
   "ftbquests.chapter.irons.quest9095684215473510296.description1": "唤魔者法术",
   "ftbquests.chapter.irons.quest9197503175705427737.description1": "也许是你的第一本魔法书？",
-  "ftbquests.chapter.irons.quest927475433175052808.description1": "\u0026f需要在召唤师塔中获得未翻译的研究日志，随后与召唤师塔院子中有概率生成的流浪商人交易得到已翻译的研究日志，并使用已翻译的研究日志与牧师交换获得村民圣经。",
+  "ftbquests.chapter.irons.quest927475433175052808.description1": "\u0026f需要在召唤师塔中获得高位唤魔者的研究日志，随后与召唤师塔院子中有概率生成的流浪商人交易得到已翻译的研究日志，并使用已翻译的研究日志与牧师交换获得村民圣经。",
   "ftbquests.chapter.irons.title": "\u0026a铁锈魔法师",
   "ftbquests.chapter.kots.quest1293243215694761805.description1": "在背包的左上角可以打开日历，右键相应日期领取签到奖励。",
   "ftbquests.chapter.kots.quest1293243215694761805.description2": "\u0026e[WARN]\u0026b领取签到奖励时有 50%% 概率原地生成一只宝箱怪，请在保证自身安全时领取奖励。",
