--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
@@ -1,5 +1,16 @@
 {
   "kots.modpack.name": "\u00a7b耕云钓月",
+  "kots.dimensionviewer.minecraft.overworld": "主世界",
+  "kots.dimensionviewer.minecraft.the_nether": "地獄",
+  "kots.dimensionviewer.minecraft.the_end": "終界",
+  "kots.dimensionviewer.javd.javd": "虛空",
+  "kots.dimensionviewer.jamd.mining": "礦場",
+  "kots.dimensionviewer.jamd.nether": "地獄礦場",
+  "kots.dimensionviewer.jamd.end": "終界礦場",
+  "kots.dimensionviewer.tofucraft.tofu_world": "豆乳星",
+  "kots.dimensionviewer.the_bumblezone.the_bumblezone": "黃蜂領域",
+  "kots.dimensionviewer.touhou_little_maid_spell.the_retreat": "歸隱之地",
+  "kots.dimensionviewer.irons_spellbooks.pocket_dimension": "口袋維度",
   "kubejs.message.enchanting_table_blocked.0": "\u00a7b你不许附魔!",
   "kubejs.message.enchanting_table_blocked.1": "\u00a7b請透過村民交易、烈焰使者附魔室或蜂蜜結晶花以獲取附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "\u00a7a此工具已綁定至投影模組工具。",
