--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -1,5 +1,16 @@
 {
   "kots.modpack.name": "\u00a7b耕云钓月",
+  "kots.dimensionviewer.minecraft.overworld": "主世界",
+  "kots.dimensionviewer.minecraft.the_nether": "下界",
+  "kots.dimensionviewer.minecraft.the_end": "末地",
+  "kots.dimensionviewer.javd.javd": "虚空",
+  "kots.dimensionviewer.jamd.mining": "矿场",
+  "kots.dimensionviewer.jamd.nether": "下界矿场",
+  "kots.dimensionviewer.jamd.end": "末地矿场",
+  "kots.dimensionviewer.tofucraft.tofu_world": "豆乳星",
+  "kots.dimensionviewer.the_bumblezone.the_bumblezone": "黄蜂领域",
+  "kots.dimensionviewer.touhou_little_maid_spell.the_retreat": "归隐之地",
+  "kots.dimensionviewer.irons_spellbooks.pocket_dimension": "口袋维度",
   "kubejs.message.enchanting_table_blocked.0": "\u00a7b你不准附魔！",
   "kubejs.message.enchanting_table_blocked.1": "\u00a7b通过村民交易、烈焰人附魔室或蜂蜜结晶花来获取附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "\u00a7a此工具已绑定投影模组工具。",
