feat(common): #18 seeds convert

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -133,6 +133,12 @@
   "kubejs.tooltip.item.artifacts.everlasting_beef.1": "\u00a7e我不是很懂为什么你非要天天吃这个。",
   "kubejs.tooltip.item.artifacts.eternal_steak.0": "\u00a7e你大概是从不种田的冒险玩家吧。",
   "kubejs.tooltip.item.artifacts.eternal_steak.1": "\u00a7e我不是很懂为什么你非要天天吃这个。",
+  "kubejs.tooltip.item.youkaishomecoming.green_coffee_beans.0": "\u00a7e阿拉比卡豆馥郁细腻，酸味宜人，质感顺滑，苦涩味少。",
+  "kubejs.tooltip.item.youkaishomecoming.coffee_beans.0": "\u00a7e阿拉比卡豆馥郁细腻，酸味宜人，质感顺滑，苦涩味少。",
+  "kubejs.tooltip.item.youkaishomecoming.coffee_powder.0": "\u00a7e阿拉比卡豆馥郁细腻，酸味宜人，质感顺滑，苦涩味少。",
+  "kubejs.tooltip.item.bakeries.raw_coffee_beans.0": "\u00a7e罗布斯塔豆味道浓郁，酸味不明显，苦味较重，风味强烈。",
+  "kubejs.tooltip.item.bakeries.coffee_beans.0": "\u00a7e罗布斯塔豆味道浓郁，酸味不明显，苦味较重，风味强烈。",
+  "kubejs.tooltip.item.bakeries.ground_coffee.0": "\u00a7e罗布斯塔豆味道浓郁，酸味不明显，苦味较重，风味强烈。",
 
   "kubejs.tooltip.tag.forge.pasta.0": "\u00a77面条这个碳水,谁拼命吃都得胖。",
   "kubejs.tooltip.tag.forge.chocolate.0": "\u00a77食之甘甜滑润,入口回味无穷。",
