--- a/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
@@ -179,7 +179,14 @@
   "kubejs.tooltip.item.artifacts.everlasting_beef.1": "\u00a7eYou must be the adventurer who never farms.",
   "kubejs.tooltip.item.artifacts.eternal_steak.0": "\u00a7eI don't get why you eat this every day.",
   "kubejs.tooltip.item.artifacts.eternal_steak.1": "\u00a7eYou must be the adventurer who never farms.",
-  
+
+  "kubejs.tooltip.item.youkaishomecoming.green_coffee_beans.0": "\u00a7eArabica beans are fragrant and delicate, pleasantly acidic, smooth in texture, with little bitterness.",
+  "kubejs.tooltip.item.youkaishomecoming.coffee_beans.0": "\u00a7eArabica beans are fragrant and delicate, pleasantly acidic, smooth in texture, with little bitterness.",
+  "kubejs.tooltip.item.youkaishomecoming.coffee_powder.0": "\u00a7eArabica beans are fragrant and delicate, pleasantly acidic, smooth in texture, with little bitterness.",
+  "kubejs.tooltip.item.bakeries.raw_coffee_beans.0": "\u00a7eRobusta beans have a rich flavor, low acidity, pronounced bitterness, and strong taste.",
+  "kubejs.tooltip.item.bakeries.coffee_beans.0": "\u00a7eRobusta beans have a rich flavor, low acidity, pronounced bitterness, and strong taste.",
+  "kubejs.tooltip.item.bakeries.ground_coffee.0": "\u00a7eRobusta beans have a rich flavor, low acidity, pronounced bitterness, and strong taste.",
+
   "kubejs.tooltip.tag.forge.pasta.0": "\u00a77Noodles are carbs — eat too many and you'll get fat.",
   "kubejs.tooltip.tag.forge.chocolate.0": "\u00a77Sweet and silky, with a lingering aftertaste.",
   
