fix(common): various bugs

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
@@ -4,7 +4,7 @@
   "kots.dimensionviewer.minecraft.overworld": "Overworld",
   "kots.dimensionviewer.minecraft.the_nether": "The Nether",
   "kots.dimensionviewer.minecraft.the_end": "The End",
-  "kots.dimensionviewer.javd.javd": "The Void",
+  "kots.dimensionviewer.javd.void": "The Void",
   "kots.dimensionviewer.jamd.mining": "Mining",
   "kots.dimensionviewer.jamd.nether": "Nether Mining",
   "kots.dimensionviewer.jamd.end": "End Mining",
