--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -3,7 +3,7 @@
   "kots.dimensionviewer.minecraft.overworld": "主世界",
   "kots.dimensionviewer.minecraft.the_nether": "下界",
   "kots.dimensionviewer.minecraft.the_end": "末地",
-  "kots.dimensionviewer.javd.javd": "虚空",
+  "kots.dimensionviewer.javd.void": "虚空",
   "kots.dimensionviewer.jamd.mining": "矿场",
   "kots.dimensionviewer.jamd.nether": "下界矿场",
   "kots.dimensionviewer.jamd.end": "末地矿场",
