--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
@@ -3,7 +3,7 @@
   "kots.dimensionviewer.minecraft.overworld": "主世界",
   "kots.dimensionviewer.minecraft.the_nether": "地獄",
   "kots.dimensionviewer.minecraft.the_end": "終界",
-  "kots.dimensionviewer.javd.javd": "虛空",
+  "kots.dimensionviewer.javd.void": "虛空",
   "kots.dimensionviewer.jamd.mining": "礦場",
   "kots.dimensionviewer.jamd.nether": "地獄礦場",
   "kots.dimensionviewer.jamd.end": "終界礦場",
