fix(client): coffee powder

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_hk.json
@@ -133,11 +133,11 @@
   "kubejs.tooltip.item.artifacts.everlasting_beef.1": "\u00a7e我不太明白為甚麼你非要天天吃這個。",
   "kubejs.tooltip.item.artifacts.eternal_steak.0": "\u00a7e你大概是從不務農的冒險玩家吧。",
   "kubejs.tooltip.item.artifacts.eternal_steak.1": "\u00a7e我不太明白為甚麼你非要天天吃這個。",
-  "kubejs.tooltip.item.youkaishomecoming.green_coffee_beans.0": "\u00a7e阿拉比卡豆馥郁細膩，酸味宜人，質感順滑，苦澀味少。",
+  "kubejs.tooltip.item.youkaishomecoming.green_coffee_bean.0": "\u00a7e阿拉比卡豆馥郁細膩，酸味宜人，質感順滑，苦澀味少。",
   "kubejs.tooltip.item.youkaishomecoming.coffee_beans.0": "\u00a7e阿拉比卡豆馥郁細膩，酸味宜人，質感順滑，苦澀味少。",
   "kubejs.tooltip.item.youkaishomecoming.coffee_powder.0": "\u00a7e阿拉比卡豆馥郁細膩，酸味宜人，質感順滑，苦澀味少。",
-  "kubejs.tooltip.item.bakeries.raw_coffee_beans.0": "\u00a7e羅布斯塔豆味道濃郁，酸味不明顯，苦味較重，風味強烈。",
-  "kubejs.tooltip.item.bakeries.coffee_beans.0": "\u00a7e羅布斯塔豆味道濃郁，酸味不明顯，苦味較重，風味強烈。",
+  "kubejs.tooltip.item.bakeries.raw_coffee_bean.0": "\u00a7e羅布斯塔豆味道濃郁，酸味不明顯，苦味較重，風味強烈。",
+  "kubejs.tooltip.item.bakeries.coffee_bean.0": "\u00a7e羅布斯塔豆味道濃郁，酸味不明顯，苦味較重，風味強烈。",
   "kubejs.tooltip.item.bakeries.ground_coffee.0": "\u00a7e羅布斯塔豆味道濃郁，酸味不明顯，苦味較重，風味強烈。",
 
   "kubejs.tooltip.tag.forge.pasta.0": "\u00a77麵條這種碳水，誰拼命吃都會胖。",
